modified:   dashboard/templates/base.html

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -44,6 +44,13 @@
             </a>
           </li>
   {% if request.user.is_superuser %}
+          <li class="sidebar-item {% if request.resolver_match.url_name == 'list_userprofiles' %}active{% endif %}">
+            <a class="sidebar-link" href="{% url 'list_userprofiles' %}">
+              <i class="align-middle" data-feather="users"></i>
+              <span class="align-middle">User Profiles</span>
+            </a>
+          </li>
+
           <li class="sidebar-item {% if request.resolver_match.url_name == 'livetraffic' %}active{% endif %}">
             <a class="sidebar-link" href="{% url 'livetraffic' %}">
               <i class="align-middle" data-feather="activity"></i>
