modified:   dashboard/models.py modified:   dashboard/templates/main/domain_error.html 	modified:   dashboard/views.py

--- a/dashboard/templates/main/domain_error.html
+++ b/dashboard/templates/main/domain_error.html
@@ -11,7 +11,7 @@
 									<h5 class="card-title mb-0">Error message</h5>
 								</div>
 								<div class="card-body">
-									The domain name {{ domain }} already exists.
+									The following error occured: {{ error }}
 								</div>
 							</div>
                                                 </div>
