new file:   dashboard/fixtures/phpimages.json 	modified:   dashboard/forms.py 	modified:   dashboard/models.py 	modified:   dashboard/templates/main/add_domain.html 	modified:   dashboard/templates/main/view_domain.html

--- a/dashboard/templates/main/view_domain.html
+++ b/dashboard/templates/main/view_domain.html
@@ -148,6 +148,10 @@
 											<th class="d-none d-xl-table-cell">Nginx config:</th>
                                                                                         <td>{{ form.nginx_config }}</td>
 										</tr>
+                                                                                <tr>
+                                                                                  <th class="d-none d-xl-table-cell">PHP Version:</th>
+                                                                                  <td colspan="3">{{ form.php_image }}</td>
+                                                                                </tr>
                                                                         </tbody>
                                                                 </table>
                                                         </div>
