modified:   dashboard/templates/main/domain.html

--- a/dashboard/templates/main/domain.html
+++ b/dashboard/templates/main/domain.html
@@ -16,7 +16,7 @@
         <div class="card text-center">
           <div class="card-body">
             <h6 class="card-title">Storage</h6>
-            <p class="card-text">{{ total_storage }} / {{ pkg.max_storage_size }} MB</p>
+            <p class="card-text">{{ total_storage }} / {{ pkg.max_storage_size }} GB</p>
           </div>
         </div>
       </div>
