--- a/dashboard/templates/main/pause_domain.html
+++ b/dashboard/templates/main/pause_domain.html
@@ -3,7 +3,7 @@
                         <main class="content">
                                 <div class="container-fluid p-0">
 
-                                        <h1 class="h3 mb-3"><strong>Pause domain</strong> list</h1>
+                                        <h1 class="h3 mb-3"><strong>{% if action == 'stop' %}Pause{% elif action == 'start' %}Start{% endif %} domain</strong> list</h1>
                                         <div class="row">
                                                 <div class="col-12 col-lg-12 col-xxl-12">
 							<div class="card">
