--- a/dashboard/templates/main/pause_domain.html
+++ b/dashboard/templates/main/pause_domain.html
@@ -3,19 +3,19 @@
                         <main class="content">
                                 <div class="container-fluid p-0">
 
-                                        <h1 class="h3 mb-3"><strong>{% if action == 'stop' %}Pause{% elif action == 'start' %}Start{% endif %} domain</strong> list</h1>
+                                        <h1 class="h3 mb-3"><strong>{% if action == 'stop' %}Pause{% elif action == 'start' %}Start{% endif %} domain</strong></h1>
                                         <div class="row">
                                                 <div class="col-12 col-lg-12 col-xxl-12">
 							<div class="card">
 								<div class="card-header">
-									<h5 class="card-title mb-0">If you really want to pause this domain, please type in '{{ domain }}'</h5>
+									<h5 class="card-title mb-0">If you really want to {% if action == 'stop' %}Pause{% elif action == 'start' %}Start{% endif %}  this domain, please type in '{{ domain }}'</h5>
 									{% if error %}<h4 class="card-title mb-0">{{ error }}</h4>{% endif %}
 								</div>
 								<div class="card-body">
 									<form action="{% url 'startstop_domain' domain=domain action=action %}" method="post">
 								          {% csrf_token %}
 									<input type="text" name="imsure" class="form-control" placeholder="Domain name">
-									<input class="btn btn-primary" type="submit" value="Yes, I want to pause it">
+									<input class="btn btn-primary" type="submit" value="Yes, I want to {% if action == 'stop' %}Pause{% elif action == 'start' %}Start{% endif %} it">
 									</form>
 								</div>
 							</div>
