modified:   dashboard/models.py 	modified:   dashboard/templates/main/view_domain.html 	modified:   dashboard/templates/yaml_templates/nginx_base.yaml 	modified:   dashboard/views.py

--- a/dashboard/templates/main/view_domain.html
+++ b/dashboard/templates/main/view_domain.html
@@ -101,6 +101,10 @@
                                                                                         <td>webuser</td>
                                                                                 </tr>
                                                                                 <tr>
+                                                                                        <th class="d-none d-xl-table-cell">Password:</th>
+                                                                                        <td>{{ sftp_pass }}</td>
+                                                                                </tr>
+                                                                                <tr>
                                                                                         <th class="d-none d-xl-table-cell">Private key:</th>
                                                                                         <td>{{ domain.scp_privkey|linebreaks }}</td>
                                                                                 </tr>
