modified:   dashboard/templates/main/view_domain.html

--- a/dashboard/templates/main/view_domain.html
+++ b/dashboard/templates/main/view_domain.html
@@ -102,7 +102,7 @@
                                                                                 </tr>
                                                                                 <tr>
                                                                                         <th class="d-none d-xl-table-cell">Password:</th>
-                                                                                        <td>{{ sftp_pass }}</td>
+                                                                                        <td>{{ domain.sftp_pass }}</td>
                                                                                 </tr>
                                                                                 <tr>
                                                                                         <th class="d-none d-xl-table-cell">Private key:</th>
