modified:   dashboard/templates/main/upload_snapshot.html

--- a/dashboard/templates/main/upload_snapshot.html
+++ b/dashboard/templates/main/upload_snapshot.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<main class="content">
  <div class="container-fluid p-0">
 <div class="card flex-fill">
 <h1>Restore Snapshot Upload</h1>
@@ -23,4 +24,5 @@
   {% endif %}
 </div>
 </div>
+</main>
 {% endblock %}
